--- a/main.html
+++ b/main.html
@@ -5,18 +5,23 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
+
+	<!-- Container Div -->
+	<div class="container">
+
+		<!-- Section 1: Static Navbar -->
+		<nav class="navbar">
+			<a class="brand" href="#">Data Diva</a>
+			<ul class="nav">
+				<li class="active"><a href="#">About Me</a></li>
+			</ul>
+		</nav>
 	<h1>Data Diva</h1>
-<ul class="nav">
-  <li class="active">
-    <a href="#">Home</a>
-  </li>
-  <li><a href="#">Link</a></li>
-  <li><a href="#">Link</a></li>
-</ul>
+	
 
 
 
-
+	</div>
 
 </body>
 </html>
