--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
 	</div>
 	
 	<!-- Container for div -->
-	
+	<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
 
     
 
