added multiple photos

--- a/main.html
+++ b/main.html
@@ -45,8 +45,21 @@
 	</div>
 	
 	<!-- Container for div -->
-	<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
-
+	<span class="border border-primary">
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+	</span>
+	<span class="border border-primary">
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+	</span>
+	<span class="border border-primary">
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+	</span>
+	<span class="border border-primary">
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+	</span>
+	<span class="border border-primary">
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+	</span>
     
 
 
