--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-<div class="sticky-top">
+<div class="navbar navbar-static-top">
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
