changed folder file destination

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+<header class="top-bar js-top-bar_fixed_scrolling">
 <div class="navbar navbar-static-top">
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -39,26 +39,26 @@
 </div>
 </nav>	
 </div>
-
+</header> 
   	<div class="container-fluid">
     	<h1>Data Diva</h1>
 	</div>
 	
 	<!-- Container for div -->
 	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
 	</span>
 	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
 	</span>
 	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
 	</span>
 	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
 	</span>
 	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\CSS\\moviecount.jpg"></body>
+		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
 	</span>
     
 
