--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-	<!-- Container for Nav Bar -->
-	<div class="container-fluid">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Container for Nav Bar -->
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -37,29 +37,29 @@
     </form>
   </div>
 </div>
-</nav>	
+</nav>  
 </div>
 </header> 
-  	<div class="container-fluid">
-    	<h1>Data Diva</h1>
-	</div>
-	
-	<!-- Container for div -->
-	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-	</span>
-	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-	</span>
-	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-	</span>
-	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-	</span>
-	<span class="border border-primary">
-		<img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-	</span>
+    <div class="container-fluid">
+      <h1>Data Diva</h1>
+  </div>
+  
+  <!-- Container for div -->
+  <span class="border border-primary">
+    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+  </span>
+  <span class="border border-primary">
+    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+  </span>
+  <span class="border border-primary">
+    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+  </span>
+  <span class="border border-primary">
+    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+  </span>
+  <span class="border border-primary">
+    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+  </span>
     
 
 
@@ -81,5 +81,4 @@
 
   </body>
 </html>
-
 
