--- a/main.html
+++ b/main.html
@@ -40,6 +40,13 @@
 </nav>  
 </div>
 
+<!-- Manually create header -->
+<div id="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+</div>
+
 
 </header> 
     <div class="container-fluid">
