--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <!-- Container for Nav Bar -->
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
   </div>
 </div>
 </nav>  
-</div>
+</div> -->
 
 <!-- Manually create header -->
 <div id="navbar">
@@ -51,7 +51,10 @@
 </header> 
     <div class="container-fluid">
       <h1>Data Diva</h1>
-  </div>
+      <p>Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. </p>
+    </div>
+
+
   
   <!-- Container for div -->
   <span class="border border-primary">
