--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
+
+  <link rel="stylesheet" type="text/css" href="Assets//CSS//decorate.css">
   <body>
   <!-- Container for Nav Bar -->
   <!-- <div class="container-fluid">
