working sticky navbar

--- a/main.html
+++ b/main.html
@@ -69,9 +69,6 @@
 
   
   <!-- Container for div -->
-  <!-- <span class="border border-primary">
-    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-  </span>
   <span class="border border-primary">
     <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
   </span>
@@ -84,7 +81,10 @@
   <span class="border border-primary">
     <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
   </span>
-     -->
+  <span class="border border-primary">
+    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+  </span>
+    
 
 
 
