--- a/main.html
+++ b/main.html
@@ -45,14 +45,14 @@
 <!-- Manually create header -->
 <div id="navbar">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#news">About</a>
+  <a href="#contact">Resources</a>
 </div>
 
 
 </header> 
     <div class="container-fluid">
-      <h1>Data Diva</h1>
+      <h1><center>Data Diva</center></h1>
       <p>Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. 
       Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. 
 
