--- a/main.html
+++ b/main.html
@@ -53,28 +53,22 @@
 </header> 
     <div class="container-fluid">
       <h1><center>Data Diva</center></h1>
-      <p>Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. 
-      Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. 
-
-      Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.
-
-      Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. 
-      Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus. 
-
-      Sticky Navigation Example The navbar will stick to the top when you reach its scroll position. Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.  
-
-      </p>
+      <p id="caption">Data Science made sassy!</p>
     </div>
 
 
   
   <!-- Container for div -->
-  <span class="border border-primary">
-    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-  </span>
-  <span class="border border-primary">
-    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-  </span>
+  <div id="one">
+    <span class="border border-primary">
+       <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+     </span>
+  </div>
+  <div id="two">
+    <span class="border border-primary">
+      <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+    </span>
+  </div>
   <span class="border border-primary">
     <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
   </span>
