--- a/main.html
+++ b/main.html
@@ -61,10 +61,11 @@
   <!-- Container for div -->
   <div id="one">
     <span class="border border-primary">
-       <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+       <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
+       1000px;"></body>
      </span>
   </div>
-  <div id="two">
+ <!--  <div id="two">
     <span class="border border-primary">
       <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
     </span>
@@ -77,7 +78,7 @@
   </span>
   <span class="border border-primary">
     <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-  </span>
+  </span> -->
     
 
 
