added div for squares

--- a/main.html
+++ b/main.html
@@ -56,13 +56,19 @@
       <p id="caption">Data Science made sassy!</p>
     </div>
 
-
+<!-- Space for squares -->
+<div class="square">
+  <div class="content">
+    Testing...
+  </div>
+</div>
   
   <!-- Container for div -->
   <div id="one">
     <span class="border border-primary">
        <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
-       1000px;"></body>
+       1000px;">
+     </body>
      </span>
   </div>
  <!--  <div id="two">
@@ -80,8 +86,6 @@
     <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
   </span> -->
     
-
-
 
 
 
