--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
     </div>
 
 <!-- Space for squares -->
-<div class="square">
+<div style="width:100px; height: 100px; border: 1px solid #000;"" >
   <div class="content">
     Testing...
   </div>
