--- a/main.html
+++ b/main.html
@@ -57,7 +57,12 @@
     </div>
 
 <!-- Space for squares -->
-<div style="width:100px; height: 100px; border: 1px solid #000;"" >
+<div style="width:100px; height: 100px; border: 5px solid #000;"" >
+  <div class="content">
+    Testing...
+  </div>
+</div>
+<div style="width:100px; height: 100px; border: 5px solid #000;"" >
   <div class="content">
     Testing...
   </div>
