--- a/main.html
+++ b/main.html
@@ -12,40 +12,12 @@
 
   <link rel="stylesheet" type="text/css" href="Assets//CSS//decorate.css">
   <body>
-  <!-- Container for Nav Bar -->
-  <!-- <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-<header class="top-bar js-top-bar_fixed_scrolling">
-<div class="navbar navbar-static-top">
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Discover</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Connect</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</div>
-</nav>  
-</div> -->
+  
 
 <!-- Manually create header -->
 <div id="navbar">
   <a href="#home">Home</a>
-  <a href="#news">About</a>
+  <a href="#news">Blog</a>
   <a href="#contact">Resources</a>
 </div>
 
@@ -56,18 +28,13 @@
       <p id="caption">Data Science made sassy!</p>
     </div>
 
-<!-- Space for squares -->
-<div style="width:100px; height: 100px; border: 5px solid #000;"" >
-  <div class="content">
-    Testing...
-  </div>
-</div>
-<div style="width:100px; height: 100px; border: 5px solid #000;"" >
-  <div class="content">
-    Testing...
-  </div>
-</div>
-  
+  <h4 id="info">My Story</h4>
+  <p>Hi there! So I'm Loretta :) </p>
+  <p>Mostly, I keep to myself learning and applying skills to solve problems. My academic backround is in Economics (BS) and Political Science (BA) [+ 3 separate certificates in Global, Latin American & African Studies] from the University of Pittsburgh. So yeah, I'm smart and amabitious! ;) After graduating, I got more interested in computer science stuff. I built this space myself to showcase my analytics work (using R & Python mostly) At the moment, I'm a freelance data science consultant. I work well with Excel, Tableau, R and Python. Also, working towards getting some SQL certification. I'm doing all this so I'll be well prepared for my Masters in Analytics program at the University of Chicago. <br></p>
+  <p><b>Fun fact #1 :</b> I was born in Kumasi, Ghana and grew up speaking Asante-Twi. After moving to the US, I learned English and later Spanish.<p>
+   
+
+
   <!-- Container for div -->
   <div id="one">
     <span class="border border-primary">
