--- a/main.html
+++ b/main.html
@@ -27,36 +27,37 @@
       <h1><center>Data Diva</center></h1>
       <p id="caption">Data Science made sassy!</p>
     </div>
-
-  <h4 id="info">My Story</h4>
-  <p>Hi there! So I'm Loretta :) </p>
-  <p>Mostly, I keep to myself learning and applying skills to solve problems. My academic backround is in Economics (BS) and Political Science (BA) [+ 3 separate certificates in Global, Latin American & African Studies] from the University of Pittsburgh. So yeah, I'm smart and amabitious! ;) After graduating, I got more interested in computer science stuff. I built this space myself to showcase my analytics work (using R & Python mostly) At the moment, I'm a freelance data science consultant. I work well with Excel, Tableau, R and Python. Also, working towards getting some SQL certification. I'm doing all this so I'll be well prepared for my Masters in Analytics program at the University of Chicago. <br></p>
-  <p><b>Fun fact #1 :</b> I was born in Kumasi, Ghana and grew up speaking Asante-Twi. After moving to the US, I learned English and later Spanish.<p>
+    <div id="info">
+      <h4>My Story</h4>
+      <p>Hi there! So I'm Loretta :) </p>
+      <p>Mostly, I keep to myself learning and applying skills to solve problems.<br> My academic backround is in Economics (BS) and Political Science (BA) [+ 3 separate certificates in Global, Latin American & African Studies] from the University of Pittsburgh.<br> So yeah, I'm smart and amabitious! ;) After graduating, I got more interested in computer science stuff. I built this space myself to showcase my analytics work (using R & Python mostly).<br> At the moment, I'm a freelance data science consultant. I work well with Excel, Tableau, R and Python. Also, working towards getting some SQL certification. I'm doing all this so I'll be well prepared for my Masters in Analytics program at the University of Chicago. <br></p>
+      <!-- Include this bit in blog -->
+      <!-- <p><b>Fun Fact #1:</b> I was born in Kumasi, Ghana and grew up speaking Asante-Twi. After moving to the US, I learned English and later Spanish.<p> -->
+      <!-- <p><b>Fun Fact #2:</b> It took me a long time to love my cultural background but learned that if you don't love who you are, who will?</p> -->
+      <!-- <p><b>Fun Fact #3:</b> I love music and dancing. If all else fails, I'll travel the world dancing.</p> -->
+    </div>
    
 
 
   <!-- Container for div -->
-  <div id="one">
+<div id="one">
     <span class="border border-primary">
        <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
        1000px;">
      </body>
      </span>
-  </div>
- <!--  <div id="two">
-    <span class="border border-primary">
-      <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-    </span>
-  </div>
-  <span class="border border-primary">
-    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
+</div>
+
+<div id="content">
+  <h3>Projects</h3>
+  <span id="p1"> 
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
   </span>
-  <span class="border border-primary">
-    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-  </span>
-  <span class="border border-primary">
-    <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg"></body>
-  </span> -->
+
+
+</div>
+  
+
     
 
 
