finished imputing outline

--- a/main.html
+++ b/main.html
@@ -50,10 +50,23 @@
 
 <div id="content">
   <h3>Projects</h3>
-  <span id="p1"> 
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-  </span>
 
+    <div id="p1">
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" align="center"></iframe>
+
+    <h4>Surviving a Sinking Documentation</h4>
+    <p>To predict who would survive the sinking of the RMS Titanic, I did the following:<br></p> 
+    <ul>
+      <li>examined the data provided to be by Kaagle in Excel</li>
+      <li>figured out what features might be most useful and proceed to clean data and conduct descriptive statistics and early analysis with Python using Jupyter Notebooks</li>
+      <li>compleated final analysis using Decision Trees in R</li>
+    </ul>
+
+    
+    </div>
+  
+
+  
 
 </div>
   
