--- a/main.html
+++ b/main.html
@@ -30,7 +30,9 @@
     <div id="info">
       <h4>My Story</h4>
       <p>Hi there! So I'm Loretta :) </p>
-      <p>Mostly, I keep to myself learning and applying skills to solve problems.<br> My academic backround is in Economics (BS) and Political Science (BA) [+ 3 separate certificates in Global, Latin American & African Studies] from the University of Pittsburgh.<br> So yeah, I'm smart and amabitious! ;) After graduating, I got more interested in computer science stuff. I built this space myself to showcase my analytics work (using R & Python mostly).<br> At the moment, I'm a freelance data science consultant. I work well with Excel, Tableau, R and Python. Also, working towards getting some SQL certification. I'm doing all this so I'll be well prepared for my Masters in Analytics program at the University of Chicago. <br></p>
+      <p>Mostly, I keep to myself - learning and applying skills to solve problems.<br> My academic backround is in Economics (BS) and Political Science (BA) [+ 3 separate certificates in Global, Latin American & African Studies] from the University of Pittsburgh]. With honors. Go me!<br> So yeah, I'm smart and amabitious! ;) After graduating, I got more interested in computer science stuff. I built this space myself to showcase my analytics work (using R & Python mostly).<br> At the moment, I'm a freelance data science consultant. I work well with Excel, Tableau, R and Python. Also, working towards getting some SQL certification.<br> 
+      I'm doing all this so I'll be well prepared for my Masters in Analytics program at the University of Chicago. <br>
+      Yeah, I'm a pretty serious nerd who loves bopping to music (Afrobeat, Hip-Hop/Rap, old school Ghanaian Highlife, etc.) whilst working in solitude! </p>
       <!-- Include this bit in blog -->
       <!-- <p><b>Fun Fact #1:</b> I was born in Kumasi, Ghana and grew up speaking Asante-Twi. After moving to the US, I learned English and later Spanish.<p> -->
       <!-- <p><b>Fun Fact #2:</b> It took me a long time to love my cultural background but learned that if you don't love who you are, who will?</p> -->
@@ -54,15 +56,17 @@
     <div id="p1">
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" align="center"></iframe>
 
-    <h4>Surviving a Sinking Documentation</h4>
+    <h4>Surviving a Sinking Documentation: </h4>
     <p>To predict who would survive the sinking of the RMS Titanic, I did the following:<br></p> 
     <ul>
-      <li>examined the data provided to be by Kaagle in Excel</li>
-      <li>figured out what features might be most useful and proceed to clean data and conduct descriptive statistics and early analysis with Python using Jupyter Notebooks</li>
+      <li>examined the data (provided by Kaggle) in Excel</li>
+      <li>figured out what features might be most useful</li>
+      <li>proceed to clean data and conduct descriptive statistics and early analysis with Python using Jupyter Notebooks</li>
       <li>compleated final analysis using Decision Trees in R</li>
     </ul>
 
-    
+    <!-- Link Jupyter Notebook -->
+    <p><a href=""></a>Check out the scrap sheet for this analysis here!</p>
     </div>
   
 
