--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Data Diva</title>
+    <title>Data Driven</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,8 +24,8 @@
 
 </header> 
     <div class="container-fluid">
-      <h1><center>Data Diva</center></h1>
-      <p id="caption">Data Science made sassy!</p>
+      <h1><center>Data Driven</center></h1>
+      <p id="caption">Data Science made simple!</p>
     </div>
     <div id="info">
       <h4>My Story</h4>
