making more progress with website vision

--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
 
 <!-- Manually create header -->
 <div id="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">Blog</a>
-  <a href="#contact">Resources</a>
+  <a href="#home" target="_blank">Home</a>
+  <a href="#projects" target="_blank">Projects</a>
+  <a href="#contact">Languages</a>
 </div>
 
 
@@ -26,34 +26,28 @@
     <div class="container-fluid">
       <h1><center>Data Driven</center></h1>
       <p id="caption">Data Science made simple!</p>
-    </div>
-    <div id="info">
-      <h4>My Story</h4>
-      <p>Hi there! So I'm Loretta :) </p>
-      <p>Mostly, I keep to myself - learning and applying skills to solve problems.<br> My academic backround is in Economics (BS) and Political Science (BA) [+ 3 separate certificates in Global, Latin American & African Studies] from the University of Pittsburgh]. With honors. Go me!<br> So yeah, I'm smart and amabitious! ;) After graduating, I got more interested in computer science stuff. I built this space myself to showcase my analytics work (using R & Python mostly).<br> At the moment, I'm a freelance data science consultant. I work well with Excel, Tableau, R and Python. Also, working towards getting some SQL certification.<br> 
-      I'm doing all this so I'll be well prepared for my Masters in Analytics program at the University of Chicago. <br>
-      Yeah, I'm a pretty serious nerd who loves bopping to music (Afrobeat, Hip-Hop/Rap, old school Ghanaian Highlife, etc.) whilst working in solitude! </p>
-      <!-- Include this bit in blog -->
-      <!-- <p><b>Fun Fact #1:</b> I was born in Kumasi, Ghana and grew up speaking Asante-Twi. After moving to the US, I learned English and later Spanish.<p> -->
-      <!-- <p><b>Fun Fact #2:</b> It took me a long time to love my cultural background but learned that if you don't love who you are, who will?</p> -->
-      <!-- <p><b>Fun Fact #3:</b> I love music and dancing. If all else fails, I'll travel the world dancing.</p> -->
-    </div>
-   
+  
+      <div id="home">
+        <h3>My Story</h3>
+        <p>Loretta Agyemang is a Masters in Analytics candidate at the University of Chicago.<br>
+      She applies her intradisciplinary skill set to solve real world problems.<br>
+      She loves learning, writing & reading, traveling & the arts.</p>
+      </div>
 
 
-  <!-- Container for div -->
-<div id="one">
-    <span class="border border-primary">
+      <div id="one">
+      <span class="border border-primary">
        <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
        1000px;">
      </body>
      </span>
-</div>
+    </div>
 
-<div id="content">
-  <h3>Projects</h3>
+<div class="container-fluid" id="projects">
+  <h2 align="center">Projects</h2>
 
     <div id="p1">
+    <h4>Titanic Survival Analysis</h4>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" align="center"></iframe>
 
     <h4>Surviving a Sinking Documentation: </h4>
@@ -66,12 +60,9 @@
     </ul>
 
     <!-- Link Jupyter Notebook -->
-    <p><a href=""></a>Check out the scrap sheet for this analysis here!</p>
+    <p></a>Check out the scrap sheet for this analysis <a href="file:///C:/Users/loret/Desktop/Coding/DataDiva/Titanic_Analyis.html" target="_blank">here!</a></p>
     </div>
   
-
-  
-
 </div>
   
 
