--- a/main.html
+++ b/main.html
@@ -47,7 +47,12 @@
   <h2 align="center">Projects</h2>
 
     <div id="p1">
-    <h4>Titanic Survival Analysis</h4>
+    <h4><a href="https://digitalcommons.butler.edu/bjur/vol3/iss1/2/" target="_blank">Published Development Economics Research</a></h4>
+    <h5>Women’s Work: Labor Market Outcomes and Female Entrepreneurship in Ghana</h5>
+    <p>While working towards my undergraduate degrees at the University of Pittsburgh - a Bachelor of Science in Economics and a Bachelor of Arts in Political Science as well as certificates in African Studies, Latin American Studies and Global Studies - I designed and executed in field research in my country of birth, Ghana. Although I'm a naturalized US citizen, I have had a long cultivated love for my first country. Hearing stories about about my entrepreneural grandmothers inspired me to conduct rigorous interdisciplinary resarch (including regression analysis with R).<br> Speaking with savy, brilliant business women in Ghana about their work is a priceless life experience for me.</p>
+    
+    <h4 style="color: blue"> Data Science Projects</h4>
+    <h5>Titanic Survival Analysis</h5>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" align="center"></iframe>
 
     <h4>Surviving a Sinking Documentation: </h4>
