--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <div id="navbar">
   <a href="#home" target="_blank">Home</a>
   <a href="#projects" target="_blank">Projects</a>
-  <a href="#contact">Languages</a>
+  <a href="#lang">Languages</a>
 </div>
 
 
@@ -66,6 +66,16 @@
 
     <!-- Link Jupyter Notebook -->
     <p></a>Check out the scrap sheet for this analysis <a href="file:///C:/Users/loret/Desktop/Coding/DataDiva/Titanic_Analyis.html" target="_blank">here!</a></p>
+    </div>
+
+
+
+ <!-- Display coding language knowledge -->
+
+    <div class="container-fluid" id="lang">
+      <h2 align="center">Programming Languages</h2>
+      <h4>Structured Querying Language (SQL)</h4>
+
     </div>
   
 </div>
