trying to do something with parallex scrolling

--- a/Titanic_Analyis.html
+++ b/Titanic_Analyis.html
@@ -21,5 +21,28 @@
   </div> 
 </div>
 
+
+<!-- Parallax Scrolling -->
+<style>
+.parallax { 
+    /* The image used */
+    background-image: url("file:///C:/Users/loret/Desktop/Ghana2017/_MG_5462.JPG");
+
+    background-image: url("file:///C:/Users/loret/Desktop/Ghana2017/_MG_5657.JPG");
+
+    /* Set a specific height */
+    height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
+
+<!-- Container element -->
+<div class="parallax"></div>
+
 </body>
 </html>
