progress with website

--- a/main.html
+++ b/main.html
@@ -74,21 +74,21 @@
 
     <div class="container-fluid" id="lang">
       <h2 align="center">Programming Languages</h2>
-      <h4>Structured Querying Language (SQL)</h4>
-
+      <section id="sql">
+        <h4>Structured Querying Language (SQL)</h4>
+      </section>
+      <section id="r">
+        <h4>R</h4>
+      </section>
+      <section id="python">
+        <h4>Python</h4>
+      </section>
     </div>
   
 </div>
   
 
     
-
-
-
-
-
-
-
 
 
 
