not pleased with website look/feel

--- a/main.html
+++ b/main.html
@@ -28,17 +28,21 @@
       <p id="caption">Data Science made simple!</p>
   
       <div id="home">
-        <h3>My Story</h3>
-        <p>Loretta Agyemang is a Masters in Analytics candidate at the University of Chicago.<br>
-      She applies her intradisciplinary skill set to solve real world problems.<br>
-      She loves learning, writing & reading, traveling & the arts.</p>
+        <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
+        <section id="story">
+        <font color="white"><h3>My Story</h3>
+        <p>Hi, I'm Loretta Agyemang! I love learning, writing & reading, traveling & the arts.</p>
+        <p>After graduating with honors in Economics & Political Science from the University of Pittsburgh, I decided to pursue data science. Currently, I'm a Masters in Analytics candidate at the University of Chicago.</p><br>
+        <p>I enjoy appling my intradisciplinary skill set to solve real world problems. Outside of this field, I love learning languages and discussing pressing issues.</p> 
+      </font>
+
+        </section>
       </div>
 
 
       <div id="one">
       <span class="border border-primary">
-       <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
-       1000px;">
+       <!-- <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 1000px;"> -->
      </body>
      </span>
     </div>
