added image like the website more now

--- a/main.html
+++ b/main.html
@@ -25,24 +25,23 @@
 </header> 
     <div class="container-fluid">
       <h1><center>Data Driven</center></h1>
-      <p id="caption">Data Science made simple!</p>
+      <p id="caption" align="center">Complex data, expert analysis, clear reporting!</p>
   
       <div id="home">
-        <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
-        <section id="story">
-        <font color="white"><h3>My Story</h3>
-        <p>Hi, I'm Loretta Agyemang! I love learning, writing & reading, traveling & the arts.</p>
-        <p>After graduating with honors in Economics & Political Science from the University of Pittsburgh, I decided to pursue data science. Currently, I'm a Masters in Analytics candidate at the University of Chicago.</p><br>
+         <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
+        <h3>My Story</h3>
+        <p>I'm Loretta Agyemang! I love learning, writing & reading, traveling & the arts.</p>
+        <p>After graduating with honors in Economics & Political Science from the University of Pittsburgh, I decided to pursue data science.</p> 
+        <p>Currently, I'm a Masters in Analytics candidate at the University of Chicago.</p>
         <p>I enjoy appling my intradisciplinary skill set to solve real world problems. Outside of this field, I love learning languages and discussing pressing issues.</p> 
       </font>
-
-        </section>
       </div>
 
 
       <div id="one">
       <span class="border border-primary">
-       <!-- <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 1000px;"> -->
+       <img src="C:\\Users\\loret\\Desktop\\Coding\\DataDiva\\Assets\\images\\moviecount.jpg" alt="graph" style="width: 1500px; height: 
+       1000px;">
      </body>
      </span>
     </div>
@@ -104,4 +103,3 @@
     <script src="Assets//javascript//action.js"></script>
   </body>
 </html>
-
