satisfied with image

--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 
 </header> 
     <div class="container-fluid">
-      <h1><center>Data Driven</center></h1>
+      <h1><center>Data Driven.</center></h1>
       <p id="caption" align="center">Complex data, expert analysis, clear reporting!</p>
   
       <div id="home">
