--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <p>I'm Loretta Agyemang! I love learning, writing & reading, traveling & the arts.</p>
         <p>After graduating with honors in Economics & Political Science from the University of Pittsburgh, I decided to pursue data science.</p> 
         <p>Currently, I'm a Masters in Analytics candidate at the University of Chicago.</p>
-        <p>I enjoy appling my intradisciplinary skill set to solve real world problems. Outside of this field, I love learning languages and discussing pressing issues.</p> 
+        <p>I enjoy applying my intradisciplinary skill set to solve real world problems. Outside of this field, I love learning languages and discussing pressing issues.</p> 
       </font>
       </div>
 
