--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 </header> 
     <div class="container-fluid">
       <h1><center>Data Driven.</center></h1>
-      <p id="caption" align="center">Complex data, expert analysis, clear reporting!</p>
+      <p id="caption" align="center"><bold>Complex data, expert analysis, clear reporting!</bold></p>
   
       <div id="home">
          <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
