added more detail in sql

--- a/main.html
+++ b/main.html
@@ -79,6 +79,11 @@
       <h2 align="center">Programming Languages</h2>
       <section id="sql">
         <h4>Structured Querying Language (SQL)</h4>
+        <p>Expertise in: </p>
+        <ul>
+          <li>Performing ad hoc queries, analysis and reporting</li>
+          <li>Monitoring scheduled tasks in production environment to ensure successful completion</li>
+        </ul>
       </section>
       <section id="r">
         <h4>R</h4>
