--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
 
 <!-- Manually create header -->
 <div id="navbar">
-  <a href="#home" target="_blank">Home</a>
   <a href="#projects" target="_blank">Projects</a>
   <a href="#lang">Languages</a>
+  <a href="#home" target="_blank">About</a>
 </div>
 
 
@@ -26,16 +26,6 @@
     <div class="container-fluid">
       <h1><center>Data Driven.</center></h1>
       <p id="caption" align="center"><bold>Complex data, expert analysis, clear reporting!</bold></p>
-  
-      <div id="home">
-         <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
-        <h3>My Story</h3>
-        <p>I'm Loretta Agyemang! I love learning, writing & reading, traveling & the arts.</p>
-        <p>After graduating with honors in Economics & Political Science from the University of Pittsburgh, I decided to pursue data science.</p> 
-        <p>Currently, I'm a Masters in Analytics candidate at the University of Chicago.</p>
-        <p>I enjoy applying my intradisciplinary skill set to solve real world problems. Outside of this field, I love learning languages and discussing pressing issues.</p> 
-      </font>
-      </div>
 
 
       <div id="one">
@@ -93,12 +83,19 @@
       </section>
     </div>
   
-</div>
+  </div>
   
+     <div id="home">
+         <img src="C:\Users\loret\OneDrive\Pictures\Screenshots\facebook-album-202560623434121\facebook-album-202560623434121\452.jpg" height="300px" width="250px" id="lore">
+        <h3>My Story</h3>
+        <p>I'm Loretta Agyemang! I love learning, writing & reading, traveling & the arts.</p>
+        <p>After graduating with honors in Economics & Political Science from the University of Pittsburgh, I decided to pursue data science.</p> 
+        <p>Currently, I'm a Masters in Analytics candidate at the University of Chicago.</p>
+        <p>I enjoy applying my intradisciplinary skill set to solve real world problems. Outside of this field, I love learning languages and discussing pressing issues.</p> 
+      </font>
+      </div>
 
     
-
-
 
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
