--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
 
 <!-- Manually create header -->
 <div id="navbar">
-  <a href="#projects" target="_blank">Projects</a>
+  <a href="#projects">Projects</a>
   <a href="#lang">Languages</a>
-  <a href="#home" target="_blank">About</a>
+  <a href="#home">About</a>
 </div>
 
 
@@ -48,19 +48,14 @@
     <h5>Titanic Survival Analysis</h5>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRiaw1LXxpYNiuHXnD6Uu911fRBWOFbEZQMgV4HuyuW0_766GHwYQYlcsyfFvalqwQ4tsU6hlAJZguX/embed?start=false&loop=true&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" align="center"></iframe>
 
-    <h4>Surviving a Sinking Documentation: </h4>
+    <h4>Documenting modeling process in Jupyter Notebooks: <a href="file:///C:/Users/loret/Desktop/Coding/DataDiva/Titanic_Analyis.html" target="_blank"> here!</a></h4>
     <p>To predict who would survive the sinking of the RMS Titanic, I did the following:<br></p> 
     <ul>
       <li>examined the data (provided by Kaggle) in Excel</li>
       <li>figured out what features might be most useful</li>
-      <li>proceed to clean data and conduct descriptive statistics and early analysis with Python using Jupyter Notebooks</li>
+      <li>cleaned data and conducted descriptive statistics and early analysis with Python using Jupyter Notebooks</li>
       <li>compleated final analysis using Decision Trees in R</li>
     </ul>
-
-    <!-- Link Jupyter Notebook -->
-    <p></a>Check out the scrap sheet for this analysis <a href="file:///C:/Users/loret/Desktop/Coding/DataDiva/Titanic_Analyis.html" target="_blank">here!</a></p>
-    </div>
-
 
 
  <!-- Display coding language knowledge -->
@@ -71,6 +66,7 @@
         <h4>Structured Querying Language (SQL)</h4>
         <p>Expertise in: </p>
         <ul>
+          <li>Relational database design and development</li>
           <li>Performing ad hoc queries, analysis and reporting</li>
           <li>Monitoring scheduled tasks in production environment to ensure successful completion</li>
         </ul>
