--- a/main.html
+++ b/main.html
@@ -140,7 +140,18 @@
 </pre></div>
 
 
-
+<p><strong>Wrote query and included aliases to retrieve the customer ID, first name, last name, address line 1 and city for all customers from the SalesLT.Address and SalesLT.CustomerAddress tables, using the dbo.ufnGetCustomerInformation function.</strong></p>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">SELECT</span> <span class="n">CA</span><span class="o">.</span><span class="n">CustomerID</span><span class="p">,</span> <span class="n">CI</span><span class="o">.</span><span class="n">FirstName</span><span class="p">,</span> <span class="n">CI</span><span class="o">.</span><span class="n">LastName</span><span class="p">,</span> <span class="n">A</span><span class="o">.</span><span class="n">Addressline1</span><span class="p">,</span> <span class="n">A</span><span class="o">.</span><span class="n">City</span>
+<span class="n">FROM</span> <span class="n">SalesLT</span><span class="o">.</span><span class="n">Address</span> <span class="n">AS</span> <span class="n">A</span>
+<span class="n">JOIN</span> <span class="n">SalesLT</span><span class="o">.</span><span class="n">CustomerAddress</span> <span class="n">AS</span> <span class="n">CA</span>
+<span class="o">--</span> <span class="n">join</span> <span class="n">based</span> <span class="n">on</span> <span class="n">AddressID</span>
+<span class="n">ON</span> <span class="n">A</span><span class="o">.</span><span class="n">AddressID</span> <span class="o">=</span> <span class="n">CA</span><span class="o">.</span><span class="n">AddressID</span>
+<span class="o">--</span> <span class="n">cross</span> <span class="n">apply</span> <span class="k">as</span> <span class="n">per</span> <span class="n">instructions</span>
+<span class="n">CROSS</span> <span class="n">APPLY</span> <span class="n">dbo</span><span class="o">.</span><span class="n">ufnGetCustomerInformation</span><span class="p">(</span><span class="n">CA</span><span class="o">.</span><span class="n">CustomerID</span><span class="p">)</span> <span class="n">AS</span> <span class="n">CI</span>
+<span class="n">ORDER</span> <span class="n">BY</span> <span class="n">CA</span><span class="o">.</span><span class="n">CustomerID</span><span class="p">;</span>
+</pre></div>
 
 
 
